opam-version: "2.0"
name: "ocaml-org"
maintainer: "The OCaml.org team"
authors: "The OCaml.org team"
license: "See LICENSE.md file."
homepage: "https://github.com/ocaml/ocaml.org"
bug-reports: "https://github.com/ocaml/ocaml.org/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "ocamlfind" {build}
  "base-bytes" {build}
  "omd" {>= "1.2.1"}
  "ocamlnet" {>= "4.0.1"}
  "conf-gnutls"
  "mpp" {>= "0.3.1"}
  "uri" {>= "1.3.11"}
  "syndic" {>= "1.5.2"}
  "cow" {>= "2.2.0"}
  "camlp4"
]
depopts: [
  "lablgtk2" # for the Gtk tutorial
]
build: make
dev-repo: "git+https://github.com/ocaml/ocaml.org.git"
synopsis: "OCaml.org website generation"
description: """
This repository contains the scripts and code to generate
the ocaml.org website.
"""
